--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,12 @@
             <dependency>
                 <groupId>com.ofcoder.klein.serializer.hessian2</groupId>
                 <artifactId>klein-serializer-hessian2</artifactId>
-                <version>0.0.8</version>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ofcoder.klein.serializer.protobuf</groupId>
+                <artifactId>klein-serializer-protobuf</artifactId>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.ofcoder.klein.spi</groupId>
