--- a/klein-rpc/klein-rpc-facade/pom.xml
+++ b/klein-rpc/klein-rpc-facade/pom.xml
@@ -22,8 +22,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.ofcoder.klein.serializer.hessian2</groupId>
-            <artifactId>klein-serializer-hessian2</artifactId>
+            <groupId>com.ofcoder.klein.serializer.protobuf</groupId>
+            <artifactId>klein-serializer-protobuf</artifactId>
         </dependency>
     </dependencies>
 </project>
